--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <a href="https://harbor.my:30003" target="_blank" rel="noopener noreferrer">Harbor Web UI</a>
             <a href="https://rancher.my/dashboard/auth/login" target="_blank" rel="noopener noreferrer">Rancher Web UI</a>
             <a href="http://10.50.0.22:30002/portal" target="_blank" rel="noopener noreferrer">APISIX Dashboard</a>
+            <a href="http://10.50.0.22:30002/swagger" target="_blank" rel="noopener noreferrer">API Swagger</a>
             <h2>Contact</h2>
             <p>myEmail@iii.org.tw</p>
         </div>
