--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <a href="https://rancher.my/dashboard/auth/login" target="_blank" rel="noopener noreferrer">Rancher Web UI</a>
             <a href="http://msmp.my:30002/portal" target="_blank" rel="noopener noreferrer">APISIX Dashboard</a>
             <a href="http://msmp.my:30002/swagger" target="_blank" rel="noopener noreferrer">API Swagger</a>
+            <a href="http://msmp.my:30001/test?arg=val1" target="_blank" rel="noopener noreferrer">API Example</a>
             <h2>Contact</h2>
             <p>myEmail@iii.org.tw</p>
         </div>
