--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a href="https://www.composerize.com/" target="_blank" rel="noopener noreferrer">Docker Run Command to Docker Compose YAML</a>
             <a href="http://msmp.my:30011" target="_blank" rel="noopener noreferrer">Docker Compose to Helm Chart</a>
             <a href="https://msmp.my:30003" target="_blank" rel="noopener noreferrer">Harbor Web UI</a>
-            <a href="https://rancher.my/dashboard/auth/login" target="_blank" rel="noopener noreferrer">Rancher Web UI</a>
+            <a href="https://msmp.my/dashboard/auth/login" target="_blank" rel="noopener noreferrer">Rancher Web UI</a>
             <a href="http://msmp.my:30002/portal" target="_blank" rel="noopener noreferrer">APISIX Dashboard</a>
             <a href="http://msmp.my:30002/swagger" target="_blank" rel="noopener noreferrer">API Swagger</a>
             <a href="http://msmp.my:30001/test?arg=val1" target="_blank" rel="noopener noreferrer">API Example</a>
