--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <a href="http://msmp.my:30001/test?arg=val1" target="_blank" rel="noopener noreferrer">API Example</a>
             <h2>Contact</h2>
             <p>
-	        E-mail:<a href="mailto: wdhwang@iii.org.tw"> wdhwang@iii.org.tw </a>
+	        <nobr>E-mail:<a href="mailto: wdhwang@iii.org.tw"> wdhwang@iii.org.tw </a></nobr>
 	    </p>
         </div>
     </div>
