--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <a href="http://msmp.my:30002/swagger" target="_blank" rel="noopener noreferrer">API Swagger</a>
             <a href="http://msmp.my:30001/test?arg=val1" target="_blank" rel="noopener noreferrer">API Example</a>
             <h2>Contact</h2>
-            <p nowrap> E-mail:<a href="mailto: wdhwang@iii.org.tw"> wdhwang@iii.org.tw </a> </p>
+            <p> E-mail:<a1 href="mailto: wdhwang@iii.org.tw"> wdhwang@iii.org.tw </a1> </p>
         </div>
     </div>
 </body>
