--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <a href="http://msmp.my:30002/portal" target="_blank" rel="noopener noreferrer">APISIX Dashboard</a>
             <a href="http://msmp.my:30002/swagger" target="_blank" rel="noopener noreferrer">API Swagger</a>
             <a href="http://msmp.my:30001/test?arg=val1" target="_blank" rel="noopener noreferrer">API Example</a>
+            <a href="http://msmp.my:8443" target="_blank" rel="noopener noreferrer">GitLab Web UI</a>
             <h2>Contact</h2>
             <p> E-mail:<a1 href="mailto: wdhwang@iii.org.tw"> wdhwang@iii.org.tw </a1> </p>
         </div>
