--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <a href="https://msmp.my/dashboard/auth/login" target="_blank" rel="noopener noreferrer">Rancher Web UI</a>
             <a href="http://msmp.my:30002/portal" target="_blank" rel="noopener noreferrer">APISIX Dashboard</a>
             <a href="http://msmp.my:30002/swagger" target="_blank" rel="noopener noreferrer">API Swagger</a>
+            <a href="http://msmp.my:30008/apps" target="_blank" rel="noopener noreferrer">API Portal</a>
             <a href="http://msmp.my:30001/test?arg=val1" target="_blank" rel="noopener noreferrer">API Example</a>
             <a href="https://msmp.my:8443" target="_blank" rel="noopener noreferrer">GitLab Web UI</a>
             <h2>Contact</h2>
